# snek-gl

./: meson.build
basic/: main.c
matrix/: camera.c  camera.h  main.c  matrix4.c  matrix4.h  vector3.c  vector3.h
